--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_svg: ^2.0.10
   gap: ^3.0.1
   ionicons: ^0.2.2
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_lints: ^5.0.0
@@ -71,8 +72,6 @@ flutter:
     - family: Tenor Sans
       fonts:
         - asset: assets/fonts/static/TenorSans-Regular.ttf
-    
-
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
