--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,9 +28,12 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  carousel_slider: ^5.0.0
   cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
+  flutter_bloc: ^9.1.1
+  flutter_credit_card: ^4.1.0
   flutter_svg: ^2.0.10
   gap: ^3.0.1
   ionicons: ^0.2.2
